@@ -1,5 +1,6 @@
 CHANGES IN FLTK 1.3.0
 
+	- Added visual feedback for button shortcuts (STR #2372)
 	- Fixed internationalisation of menus using FLuid (STR #2246)
 	- Fixed blinking of selection when the mouse was dragged 
 	  outside of the Fl_Text_* widget
